# EathrymStudy

./: CMakeLists.txt
include/: cube.h  shader.h  square.h  triangle.h
src/: cube.cpp  main.cpp  shader.cpp  square.cpp  triangle.cpp
src/shaders/: Fshade.frag  Vshade.vert
